--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
         </ul>
         </div>
     </nav>
+    <!-- Home -->
+    <section id="Home">
+        <img src="./imgs/증명사진1234.JPG" alt="Euno's profile photo" class="home__avatar">
+        <h1 class="home__title" Hello, <br/> I'm Developer </h1>
+        <h2 class="Home__description">A Full Stack Developer</h2>
+        <button class="home__contact">Contact</button>
+    </section>
     <!-- About -->
     <section id="about"></section>
     <!-- Skills -->
