--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </ul>
         </div>
     </nav>
+
     <!-- Home -->
     <section id="Home">
         <img src="./imgs/증명사진1234.JPG" alt="Euno's profile photo" class="home__avatar">
@@ -36,8 +37,46 @@
         <h2 class="Home__description">A Full Stack Developer</h2>
         <button class="home__contact">Contact</button>
     </section>
+
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+        <h1>About me</h1>
+        <p>저는 8년간 cad, cam을 다루는 디자인,기계가공쪽 업무를 보다 개발자가 되고싶어 중앙hta학원에서 java웹개발
+            을 수료한후 현재는 인프런에서 jpa, hibernate 등을 공부 중인 최은오라고 합니다.
+        </p>
+        <div class="about__majors">
+            <div class="major">
+                <div class="major__icon"></div>
+                    <i class="fa-brands fa-html5"></i>
+                <div class="major__title">Front-end</div>
+                <div class="major__description">
+                    HTML, CSS, JavaScript, Jquery
+                </div>
+            </div>
+            <div class="major">
+                <div class="major__icon"></div>
+                    <i class="fa-brands fa-java"></i>
+                <div class="major__title">Back-end</div>
+                <div class="major__description">
+                    Java, Spring, MySql, MyBatis
+                    <br /> JPA, Hibernate
+                </div>
+            </div>
+        </div>
+        <div class="about__jobs">
+            <div class="job">
+                <img src="./imgs/jobs/중앙hta-logo.png" alt="중앙HTA" class="job__logo">
+                <p class="job__name">중앙HTA</p>
+                <p class="job__period">2022.03~ 2022.09</p>
+            </div>
+            <div class="job">
+                <img src="./imgs/jobs/인프런logo.png" alt="중앙HTA" class="job__logo">
+                <p class="job__name">중앙HTA</p>
+                <p class="job__period">2022.10~ Until now</p>
+            </div>
+        </div>
+    </section>
+
     <!-- Skills -->
     <section id="skills"></section>
     <!-- Work -->
