--- a/index.html
+++ b/index.html
@@ -66,19 +66,94 @@
         <div class="about__jobs">
             <div class="job">
                 <img src="./imgs/jobs/중앙hta-logo.png" alt="중앙HTA" class="job__logo">
-                <p class="job__name">중앙HTA</p>
+                <p class="job__name">중앙HTA 교육수료</p>
                 <p class="job__period">2022.03~ 2022.09</p>
             </div>
             <div class="job">
-                <img src="./imgs/jobs/인프런logo.png" alt="중앙HTA" class="job__logo">
-                <p class="job__name">중앙HTA</p>
+                <img src="./imgs/jobs/인프런logo.png" alt="인프런" class="job__logo">
+                <p class="job__name">인프런</p>
                 <p class="job__period">2022.10~ Until now</p>
             </div>
         </div>
     </section>
 
     <!-- Skills -->
-    <section id="skills"></section>
+    <section id="skills">
+        <h1>Skills</h1>
+        <h2>Skills & Attributes</h2>
+        <p>
+            새로운것에 도전하는 것을 좋아하고 배우는 것을 좋아합니다.
+            새로운것을 두려워하지않고 항상 받아들일 준비가 되어 있습니다.
+        </p>
+        <div class="skillset">
+            <div class="skillset__left">
+                <h3 class="skillset__title">Skills</h3>
+                <div class="skill">
+                    <div class="skill__description">
+                        <span>HTML</span>
+                        <span>80%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill__description">
+                        <span>CSS</span>
+                        <span>70%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill__description">
+                        <span>JavaScript</span>
+                        <span>50%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill__description">
+                        <span>Java</span>
+                        <span>80%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill__description">
+                        <span>JPA</span>
+                        <span>70%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="skillset__right">
+                <div class="tools">
+                    <h3 class="skillset__title">Tools</h3>
+                    <ul class="tools__list">
+                        <li><span>IntelliJ</span></li>
+                        <li><span>Eclipse</span></li>
+                        <li><span>Visual Studio Code</span></li>
+                        <li><span>MySql</span></li>
+                        <li><span>Oracle</span></li>    
+                    </ul>
+                </div>
+                <div class="etc">
+                    <h3 class="skillset__title">Etc</h3>
+                    <ul class="etc__list">
+                        <li><span>Git</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Work -->
     <section id="work"></section>
     <!-- Testimonials -->
