--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
             <button class="categroy__btn">Back-end <span class="category__count">2</span> </button>
         </div>
         <div class="work__projects">
-            <a href="" class="project" target="blank">
-                <img src="./imgs/projects/youtube clonecoding sample.png" alt="Youtube">
+            <a href="" class="project" target="_blank">
+                <img class="project__img" src="./imgs/projects/youtube clonecoding sample.png" alt="Youtube">
                 <div class="project__description">
                     <h3>Youtube site</h3>
                     <span>Clone coding with HTML and CSS</span>
@@ -175,11 +175,22 @@
         </div>
     </section>
 
-    <!-- Testimonials -->
-    <section id="testimonials"></section>
-
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+        <h1 class="contact__title">Let's talk</h1>
+        <h2 class="contact__email">yami7577@gmail.com</h2>
+        <div class="contact__link">
+            <a href="https://github.com/Eoc92" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="#" target="_blank">
+                <i class="fa fa-linkedin-square"></i>
+            </a>
+        </div>
+        <p class="contact__rights"> 
+            2023 Developer Choi Euno - All rights reserved
+        </p>
+    </section>
 
 </body>
 </html>
