--- a/index.html
+++ b/index.html
@@ -36,28 +36,30 @@
         <img src="./imgs/증명사진1234.JPG" alt="Euno's profile photo" class="home__avatar">
         <h1 class="home__title" Hello, <br/> I'm Developer </h1>
         <h2 class="home__description">A Full Stack Developer</h2>
-        <button class="home__contact">Contact</button>
+        <button class="home__contact">Contact me</button>
     </section>
 
     <!-- About -->
-    <section id="about">
+    <section id="about" class="section">
         <h1>About me</h1>
         <p>저는 8년간 cad, cam을 다루는 디자인,기계가공쪽 업무를 보다 개발자가 되고싶어 중앙hta학원에서 java웹개발
             을 수료한후 현재는 인프런에서 jpa, hibernate 등을 공부 중인 최은오라고 합니다.
         </p>
         <div class="about__majors">
             <div class="major">
-                <div class="major__icon"></div>
+                <div class="major__icon">
                     <i class="fa-brands fa-html5"></i>
-                <div class="major__title">Front-end</div>
+                </div>
+                <h2 class="major__title">Front-end</h2>
                 <div class="major__description">
                     HTML, CSS, JavaScript, Jquery
                 </div>
             </div>
             <div class="major">
-                <div class="major__icon"></div>
+                <div class="major__icon">
                     <i class="fa-brands fa-java"></i>
-                <div class="major__title">Back-end</div>
+                </div>
+                <h2 class="major__title">Back-end</h2>
                 <div class="major__description">
                     Java, Spring, MySql, MyBatis
                     <br /> JPA, Hibernate
@@ -67,19 +69,23 @@
         <div class="about__jobs">
             <div class="job">
                 <img src="./imgs/jobs/중앙hta-logo.png" alt="중앙HTA" class="job__logo">
-                <p class="job__name">중앙HTA 교육수료</p>
-                <p class="job__period">2022.03~ 2022.09</p>
+                <div class="job__description">
+                    <p class="job__name">중앙HTA 교육수료</p>
+                    <p class="job__period">2022.03~ 2022.09</p>
+                </div>
             </div>
             <div class="job">
                 <img src="./imgs/jobs/인프런logo.png" alt="인프런" class="job__logo">
-                <p class="job__name">인프런</p>
-                <p class="job__period">2022.10~ Until now</p>
+                <div class="job__description">
+                    <p class="job__name">인프런 Spring, JPA강의수강</p>
+                    <p class="job__period">2022.10~ Until now</p>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Skills -->
-    <section id="skills">
+    <section id="skills" class="section">
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>
@@ -157,7 +163,7 @@
     </section>
 
     <!-- Work -->
-    <section id="work">
+    <section id="work" class="section">
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
@@ -177,7 +183,7 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact">
+    <section id="contact" class="section">
         <h1 class="contact__title">Let's talk</h1>
         <h2 class="contact__email">yami7577@gmail.com</h2>
         <div class="contact__link">
