--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
-            <button class="categroy__btn">All <span class="category__count">4</span> </button>
-            <button class="categroy__btn">Front-end <span class="category__count">2</span> </button>
-            <button class="categroy__btn">Back-end <span class="category__count">2</span> </button>
+            <button class="category__btn active">All <span class="category__count">4</span> </button>
+            <button class="category__btn">Front-end <span class="category__count">2</span> </button>
+            <button class="category__btn">Back-end <span class="category__count">2</span> </button>
         </div>
         <div class="work__projects">
             <a href="" class="project" target="_blank">
