--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <section id="contact" class="section">
         <h1 class="contact__title">Let's talk</h1>
         <h2 class="contact__email">yami7577@gmail.com</h2>
-        <div class="contact__link">
+        <div class="contact__links">
             <a href="https://github.com/Eoc92" target="_blank">
                 <i class="fab fa-github"></i>
             </a>
