--- a/index.html
+++ b/index.html
@@ -166,21 +166,23 @@
 
     <!-- Work -->
     <section id="work" class="section">
-        <h1>My work</h1>
-        <h3>Projects</h3>
-        <div class="work__categories">
-            <button class="category__btn active">All <span class="category__count">4</span> </button>
-            <button class="category__btn">Front-end <span class="category__count">2</span> </button>
-            <button class="category__btn">Back-end <span class="category__count">2</span> </button>
-        </div>
-        <div class="work__projects">
-            <a href="" class="project" target="_blank">
-                <img class="project__img" src="./imgs/projects/youtube clonecoding sample.png" alt="Youtube">
-                <div class="project__description">
-                    <h3>Youtube site</h3>
-                    <span>Clone coding with HTML and CSS</span>
-                </div>
-            </a>
+        <div class="section__container">
+            <h1>My work</h1>
+            <h3>Projects</h3>
+            <div class="work__categories">
+                <button class="category__btn active">All <span class="category__count">4</span> </button>
+                <button class="category__btn">Front-end <span class="category__count">2</span> </button>
+                <button class="category__btn">Back-end <span class="category__count">2</span> </button>
+            </div>
+            <div class="work__projects">
+                <a href="" class="project" target="_blank">
+                    <img class="project__img" src="./imgs/projects/youtube clonecoding sample.png" alt="Youtube">
+                    <div class="project__description">
+                        <h3>Youtube site</h3>
+                        <span>Clone coding with HTML and CSS</span>
+                    </div>
+                </a>
+            </div>
         </div>
     </section>
 
