--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <!-- Toggle button -->
-        <button class="navbar__toggle_btn">
+        <button class="navbar__toggle-btn">
             <i class="fas fa-bars"></i>
         </button>
     </nav>
