--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
 
     <!-- Home -->
     <section id="home">
-        <img src="./imgs/증명사진1234.JPG" alt="Euno's profile photo" class="home__avatar">
-        <h1 class="home__title" Hello, <br/> I'm Developer </h1>
-        <h2 class="home__description">A Full Stack Developer</h2>
-        <button class="home__contact">Contact me</button>
+        <div class="home__container">
+            <img src="./imgs/증명사진1234.JPG" alt="Euno's profile photo" class="home__avatar">
+            <h1 class="home__title" Hello, <br/> I'm Developer </h1>
+            <h2 class="home__description">A Full Stack Developer</h2>
+            <button class="home__contact">Contact me</button>
+        </div>
     </section>
 
     <!-- About -->
