--- a/index.html
+++ b/index.html
@@ -209,5 +209,9 @@
         </p>
     </section>
 
+    <!-- Arrow up -->
+    <button class="arrow-up">
+        <i class="fa-solid fa-arrow-up"></i>
+    </button>
 </body>
 </html>
