--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@
             <h1>My work</h1>
             <h3>Projects</h3>
             <div class="work__categories">
-                <button class="category__btn active">All <span class="category__count">4</span> </button>
-                <button class="category__btn">Front-end <span class="category__count">2</span> </button>
-                <button class="category__btn">Back-end <span class="category__count">2</span> </button>
+                <button class="category__btn active" data-filter="*">All <span class="category__count">4</span> </button>
+                <button class="category__btn" data-filter="front-end">Front-end <span class="category__count">2</span> </button>
+                <button class="category__btn" data-filter="Back-end">Back-end <span class="category__count">2</span> </button>
             </div>
             <div class="work__projects">
-                <a href="" class="project" target="_blank">
+                <a href="" class="project" target="_blank" data-type="front-end">
                     <img class="project__img" src="./imgs/projects/youtube clonecoding sample.png" alt="Youtube">
                     <div class="project__description">
                         <h3>Youtube site</h3>
